terraform-aws-infra/30-sg-rules/main.tf
resource "aws_security_group_rule" "backend_alb_rule" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = local.backend_alb_id
  source_security_group_id = local.bastion_sg_id
}

resource "aws_security_group_rule" "bastion_sg_rule" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = local.bastion_sg_id
  cidr_blocks =  ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "mongodb" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = local.bastion_sg_id
  source_security_group_id = local.mongodb_sg_id
}
